# ActParser

./: .gitignore  README.md  act_variables.py  data_from_pdf.py  data_from_pdf_table.py  data_from_text.py  data_to_table.py  get_text_utils.py  main.py  pyproject.toml
get_data/: data_from_pdf_table.py  data_from_text.py
results/: test.xlsx
test_result/: test_not_rbm.xlsx  test_rbm.xlsx
utils/: __init__.py  act_variables.py  clean_null_acts.py  fill_data.py  get_text.py  get_text_variables.py  split_vds.py
yargy_utils/: __init__.py  get_value.py  id_tokenizer.py  show_result.py
